--- a/SherpaDesk/TicketDetails.xaml
+++ b/SherpaDesk/TicketDetails.xaml
@@ -27,96 +27,105 @@
         * Row 1 contains the rest of the page layout
     -->
     <Grid Style="{StaticResource LayoutRootStyle}" Background="Transparent">
-
-        <Grid.RowDefinitions>
-            <RowDefinition Height="240"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
-            <TextBlock x:Name="pageTitle" Grid.Column="0" VerticalAlignment="Bottom" Margin="0,0,0,30" Style="{StaticResource PageHeaderTextStyle}" Text="Ticket Details" FontWeight="Normal"/>
-        </Grid>
-        <Grid Grid.Row="1" MinWidth="700">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="10" />
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="100" />
                 <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
-            <Rectangle x:Name="SubjectDecorate" Grid.ColumnSpan="5" Fill="#4C8787FE" HorizontalAlignment="Stretch" Margin="-30,0,10,0" />
-            <TextBlock x:Name="SubjectLabel" Text="" FontSize="50" Grid.Row="0" Margin="0,0,0,0" Grid.ColumnSpan="3" Foreground="White" />
-            <TextBlock x:Name="EndUserLabel" Text="" FontSize="40" Grid.Row="1" Foreground="White" />
-            <TextBlock Text="Initial Post" HorizontalAlignment="Left" Canvas.ZIndex="1" Grid.Row="1" Grid.Column="2" Margin="12,10,0,0" FontSize="25" Foreground="White" />
-            <Ellipse Fill="#7F739CB0" HorizontalAlignment="Left" Canvas.ZIndex="0" Grid.Row="1" Grid.Column="2" Height="36" Margin="0,10,0,0" VerticalAlignment="Top" Width="139"  RenderTransformOrigin="0.459,0.468"/>
-            <ScrollViewer VerticalAlignment="Stretch" Grid.ColumnSpan="3" Grid.Row="3" Margin="0,4,0,61" MaxHeight="150" Width="550" VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto">
-                <TextBlock x:Name="InitialPostLabel" Text="" Margin="0,0,18,0" TextWrapping="Wrap" FontSize="25" Foreground="White" />
-            </ScrollViewer>
-            <TextBlock x:Name="FilesLabel" Visibility="Collapsed" Text="Following file was uploaded:" Grid.ColumnSpan="3" FontSize="30" Grid.Row="3" Margin="0,160,0,0" Foreground="White" />
-            <FlipView x:Name="AttachedView" Visibility="Collapsed" Grid.Row="4" HorizontalAlignment="Left" Margin="0,0,0,0" Width="300" Height="200">
-                <FlipView.ItemTemplate>
-                    <DataTemplate>
-                        <Border BorderBrush="DarkGray" BorderThickness="1,1,1,1">
-                            <Grid>
-                                <Image Source="{Binding Image}" Margin="0" Stretch="Uniform"  />
-                                <TextBlock Text="{Binding FileName}" Margin="5,5,0,0" FontSize="10" Foreground="LightBlue" />
-                            </Grid>
-                        </Border>
-                    </DataTemplate>
-                </FlipView.ItemTemplate>
-            </FlipView>
-            <telerikPrimitives:RadPaginationControl Visibility="Collapsed" HorizontalAlignment="Left" x:Name="AttachedPages" DisplayMode="IndexLabel" ScrollViewer.HorizontalScrollMode="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.Row="4" Width="300" Margin="10,220,0,0" Foreground="White" PageProvider="{Binding ElementName=AttachedView}" />
-            <Grid Grid.Column="4" Grid.Row="1" Grid.RowSpan="4" MaxWidth="500" Canvas.ZIndex="1" Margin="10,10,20,10">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition />
-                </Grid.ColumnDefinitions>
+            <Frame x:Name="ResponseFrame" Margin="0,0,0,0" />
+            <Grid Grid.Column="1">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="auto" />
-                    <RowDefinition Height="auto" />
-                    <RowDefinition Height="*" />
+                    <RowDefinition Height="240"/>
+                    <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <ScrollViewer VerticalAlignment="Stretch" MaxHeight="350" Margin="0,0,0,50" Grid.RowSpan="3" VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto">
-                    <TextBlock x:Name="WorkpadLabel" MaxWidth="500" Margin="0,0,18,0" VerticalAlignment="Stretch" TextWrapping="WrapWholeWords" HorizontalAlignment="Left" Text="" Foreground="White" FontSize="20" />
-                </ScrollViewer>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock x:Name="pageTitle" Grid.Column="0" VerticalAlignment="Bottom" Margin="0,0,0,30" Style="{StaticResource PageHeaderTextStyle}" Text="Ticket Details" FontWeight="Normal"/>
+                </Grid>
+                <Grid Grid.Row="1" MinWidth="700">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="10" />
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="auto" />
+                    </Grid.ColumnDefinitions>
+                    <Rectangle x:Name="SubjectDecorate" Grid.ColumnSpan="5" Fill="#4C8787FE" HorizontalAlignment="Stretch" Margin="-30,0,10,0" />
+                    <TextBlock x:Name="SubjectLabel" Text="" FontSize="50" Grid.Row="0" Margin="0,0,0,0" Grid.ColumnSpan="3" Foreground="White" />
+                    <TextBlock x:Name="EndUserLabel" Text="" FontSize="40" Grid.Row="1" Foreground="White" />
+                    <TextBlock Text="Initial Post" HorizontalAlignment="Left" Canvas.ZIndex="1" Grid.Row="1" Grid.Column="2" Margin="12,10,0,0" FontSize="25" Foreground="White" />
+                    <Button x:Name="AddResponseButton" Content="Add Response" Tag="123" HorizontalAlignment="Left" Canvas.ZIndex="1" Grid.Row="1" Grid.Column="3" Margin="12,10,0,0" FontSize="20" Foreground="White" Tapped="AddResponseButton_Tapped" />
+                    <Ellipse Fill="#7F739CB0" HorizontalAlignment="Left" Canvas.ZIndex="0" Grid.Row="1" Grid.Column="2" Height="36" Margin="0,10,0,0" VerticalAlignment="Top" Width="139"  RenderTransformOrigin="0.459,0.468"/>
+                    <ScrollViewer VerticalAlignment="Stretch" Grid.ColumnSpan="3" Grid.Row="3" Margin="0,4,0,61" MaxHeight="150" Width="550" VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto">
+                        <TextBlock x:Name="InitialPostLabel" Text="" Margin="0,0,18,0" TextWrapping="Wrap" FontSize="25" Foreground="White" />
+                    </ScrollViewer>
+                    <TextBlock x:Name="FilesLabel" Visibility="Collapsed" Text="Following file was uploaded:" Grid.ColumnSpan="3" FontSize="30" Grid.Row="3" Margin="0,160,0,0" Foreground="White" />
+                    <FlipView x:Name="AttachedView" Visibility="Collapsed" Grid.Row="4" HorizontalAlignment="Left" Margin="0,0,0,0" Width="300" Height="200">
+                        <FlipView.ItemTemplate>
+                            <DataTemplate>
+                                <Border BorderBrush="DarkGray" BorderThickness="1,1,1,1">
+                                    <Grid>
+                                        <Image Source="{Binding Image}" Margin="0" Stretch="Uniform"  />
+                                        <TextBlock Text="{Binding FileName}" Margin="5,5,0,0" FontSize="10" Foreground="LightBlue" />
+                                    </Grid>
+                                </Border>
+                            </DataTemplate>
+                        </FlipView.ItemTemplate>
+                    </FlipView>
+                    <telerikPrimitives:RadPaginationControl Visibility="Collapsed" HorizontalAlignment="Left" x:Name="AttachedPages" DisplayMode="IndexLabel" ScrollViewer.HorizontalScrollMode="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.Row="4" Width="300" Margin="10,220,0,0" Foreground="White" PageProvider="{Binding ElementName=AttachedView}" />
+                    <Grid Grid.Column="4" Grid.Row="1" Grid.RowSpan="4" MaxWidth="500" Canvas.ZIndex="1" Margin="10,10,20,10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <ScrollViewer VerticalAlignment="Stretch" MaxHeight="350" Margin="0,0,0,50" Grid.RowSpan="3" VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto">
+                            <TextBlock x:Name="WorkpadLabel" MaxWidth="500" Margin="0,0,18,0" VerticalAlignment="Stretch" TextWrapping="WrapWholeWords" HorizontalAlignment="Left" Text="" Foreground="White" FontSize="20" />
+                        </ScrollViewer>
+                    </Grid>
+                </Grid>
             </Grid>
+            <VisualStateManager.VisualStateGroups>
+
+                <!-- Visual states reflect the application's view state -->
+                <VisualStateGroup x:Name="ApplicationViewStates">
+                    <VisualState x:Name="FullScreenLandscape"/>
+                    <VisualState x:Name="Filled"/>
+
+                    <!-- The entire page respects the narrower 100-pixel margin convention for portrait -->
+                    <VisualState x:Name="FullScreenPortrait">
+                        <Storyboard>
+                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="backButton" Storyboard.TargetProperty="Style">
+                                <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PortraitBackButtonStyle}"/>
+                            </ObjectAnimationUsingKeyFrames>
+                        </Storyboard>
+                    </VisualState>
+
+                    <!-- The back button and title have different styles when snapped -->
+                    <VisualState x:Name="Snapped">
+                        <Storyboard>
+                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="backButton" Storyboard.TargetProperty="Style">
+                                <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource SnappedBackButtonStyle}"/>
+                            </ObjectAnimationUsingKeyFrames>
+                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="pageTitle" Storyboard.TargetProperty="Style">
+                                <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource SnappedPageHeaderTextStyle}"/>
+                            </ObjectAnimationUsingKeyFrames>
+                        </Storyboard>
+                    </VisualState>
+                </VisualStateGroup>
+            </VisualStateManager.VisualStateGroups>
         </Grid>
-        <VisualStateManager.VisualStateGroups>
-
-            <!-- Visual states reflect the application's view state -->
-            <VisualStateGroup x:Name="ApplicationViewStates">
-                <VisualState x:Name="FullScreenLandscape"/>
-                <VisualState x:Name="Filled"/>
-
-                <!-- The entire page respects the narrower 100-pixel margin convention for portrait -->
-                <VisualState x:Name="FullScreenPortrait">
-                    <Storyboard>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="backButton" Storyboard.TargetProperty="Style">
-                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PortraitBackButtonStyle}"/>
-                        </ObjectAnimationUsingKeyFrames>
-                    </Storyboard>
-                </VisualState>
-
-                <!-- The back button and title have different styles when snapped -->
-                <VisualState x:Name="Snapped">
-                    <Storyboard>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="backButton" Storyboard.TargetProperty="Style">
-                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource SnappedBackButtonStyle}"/>
-                        </ObjectAnimationUsingKeyFrames>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="pageTitle" Storyboard.TargetProperty="Style">
-                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource SnappedPageHeaderTextStyle}"/>
-                        </ObjectAnimationUsingKeyFrames>
-                    </Storyboard>
-                </VisualState>
-            </VisualStateGroup>
-        </VisualStateManager.VisualStateGroups>
     </Grid>
 </common:LayoutAwarePage>
