--- a/SherpaDesk/AddTime.xaml
+++ b/SherpaDesk/AddTime.xaml
@@ -72,6 +72,9 @@
 
             <TextBlock HorizontalAlignment="left" Grid.Row="1" Margin="10,25,0,0" TextWrapping="Wrap" Text="Technician" VerticalAlignment="Top" FontSize="30"/>
             <ComboBox Name="TechnicianList" Grid.Column="0" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="400" Height="50" Margin="10,0,0,0" VerticalAlignment="Top">
+                <ComboBoxItem>
+                    <TextBox Text="something"/>
+                </ComboBoxItem>
                 <ComboBoxItem x:Name="TechnicianMe" />
             </ComboBox>
 
