Add Time in timesheet and changes

--- a/SherpaDesk/Login.xaml
+++ b/SherpaDesk/Login.xaml
@@ -20,11 +20,12 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <Image Height="219" Grid.Row="0" VerticalAlignment="Top" Width="705" Source="Assets/StoreLogo.png" />
-            <xtk:WatermarkTextBox x:Name="UserNameTextbox" HorizontalAlignment="Center" Margin="0,0,0,10" WatermarkText="Email Address" Height="66" Grid.Row="1" TextWrapping="NoWrap" Text="alexey.gavrilov@gmail.com" VerticalAlignment="Top" FontSize="36" Width="619"/>
-            <xtk:WatermarkPasswordBox x:Name="PasswordTextBox" HorizontalAlignment="Center" Margin="0,0,0,10" WatermarkText="Password" Height="66" Grid.Row="2"  VerticalAlignment="Top" FontSize="36" Width="619" Password="8734" />
+            <xtk:WatermarkTextBox x:Name="UserNameTextbox" HorizontalAlignment="Center" Margin="0,0,0,10" WatermarkText="Email Address" Height="66" Grid.Row="1" TextWrapping="NoWrap" Text="" VerticalAlignment="Top" FontSize="36" Width="619"/>
+            <xtk:WatermarkPasswordBox x:Name="PasswordTextBox" HorizontalAlignment="Center" Margin="0,0,0,10" WatermarkText="Password" Height="66" Grid.Row="2"  VerticalAlignment="Top" FontSize="36" Width="619" Password="" />
             <Button x:Name="SignInButton" Content="Sign In" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Top" Width="625" Height="66" Click="SignIn" FontSize="36" Background="#FF57AE57" />
+            <CheckBox x:Name="ModeBox" Content="beta" HorizontalAlignment="Left" Margin="40,188,0,0" VerticalAlignment="Top"/>
         </Grid>
-        <HyperlinkButton Content="http://app.sherpadesk.com" NavigateUri="http://app.sherpadesk.com" Grid.Row="0" Grid.Column="0"  HorizontalAlignment="Left" Margin="659,190,0,0" VerticalAlignment="Top" Foreground="White"/>
+        <HyperlinkButton x:Name="ApiHyperlink" Content="http://app.sherpadesk.com" NavigateUri="http://app.sherpadesk.com" Grid.Row="0" Grid.Column="0"  HorizontalAlignment="Left" Margin="658,168,0,0" VerticalAlignment="Top" Foreground="White"/>
         <Popup/>
     </Grid>
 </Page>
