--- a/SherpaDesk/Timesheet.xaml
+++ b/SherpaDesk/Timesheet.xaml
@@ -98,8 +98,8 @@
                     <TextBlock HorizontalAlignment="left" Grid.Row="0" Margin="10,10,0,0" TextWrapping="Wrap" Text="Technician" VerticalAlignment="Top" FontSize="24"/>
                     <ComboBox Name="TechnicianList" Grid.Column="2" Grid.Row="0" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" />
 
-                    <TextBlock HorizontalAlignment="left" Grid.Row="1" Margin="10,10,0,0" TextWrapping="Wrap" Text="Account" VerticalAlignment="Top" FontSize="24"/>
-                    <ComboBox Name="AccountList" Grid.Column="2" Grid.Row="1" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" />
+                    <TextBlock HorizontalAlignment="left" Grid.Row="1" Margin="10,10,0,0" TextWrapping="Wrap" Text="Project" VerticalAlignment="Top" FontSize="24"/>
+                    <ComboBox Name="ProjectList" Grid.Column="2" Grid.Row="1" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" />
 
                     <TextBlock HorizontalAlignment="left" Grid.Row="2" Margin="10,10,0,0" TextWrapping="Wrap" Text="Task Type" VerticalAlignment="Top" FontSize="24"/>
                     <ComboBox Name="TaskTypeList" Grid.Column="2" Grid.Row="2" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" />
@@ -135,7 +135,7 @@
                     <TextBlock HorizontalAlignment="left" Grid.Row="8" Margin="10,10,0,0" TextWrapping="Wrap" Text="Notes" VerticalAlignment="Top" FontSize="24" />
                     <TextBox x:Name="NoteTextBox" Margin="0,5,0,0" HorizontalAlignment="Stretch" Height="100" InputScope="NumberFullWidth" Grid.Row="8" TextWrapping="Wrap" Grid.Column="2" VerticalAlignment="Top" FontSize="20" />
 
-                    <Button Content="Save Time" Grid.Column="0" HorizontalAlignment="Left" Margin="0,14,0,0" Grid.ColumnSpan="3" Grid.Row="9" VerticalAlignment="Top" Height="50" Grid.RowSpan="2" Width="200" FontSize="24" Background="#FF2F9129" />
+                    <Button Content="Save Time" Grid.Column="0" HorizontalAlignment="Left" Margin="0,14,0,0" Grid.ColumnSpan="3" Grid.Row="9" VerticalAlignment="Top" Height="50" Grid.RowSpan="2" Width="200" FontSize="24" Background="#FF2F9129" Click="Button_Click" />
                 </Grid>
             </Grid>
             <Grid x:Name="TimesheetGrids" Grid.Column="4" Width="1500" Margin="0,-15,0,15">
